force-app/main/default/objects/Product_Interest__c/Product_Interest__c.object-meta.xml
<CustomObject>
    <label>Product Interest</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Interest</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>