force-app/main/default/objects/Product_Interest__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to account record in SFDC</description>
    <inlineHelpText>Link to account record in SFDC</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Interests</relationshipLabel>
    <relationshipName>Product_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>