force-app/main/default/objects/Product_Interest__c/fields/ZP_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>ZP_Company_ID__c</fullName>
    <description>Unique company ID from product (ZP)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Unique company ID from product (ZP)</inlineHelpText>
    <label>ZP Company ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>